--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "3.2.45",
+    "vue-router": "4.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "sass": "^1.58.3",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.4",
-    "vue-tsc": "^1.0.24"
+    "@vitejs/plugin-vue": "4.0.0",
+    "@vitejs/plugin-vue-jsx": "3.0.0",
+    "sass": "1.58.3",
+    "typescript": "4.9.3",
+    "vite": "4.1.4",
+    "vue-tsc": "1.0.24"
   }
 }
