--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "4.0.0",
     "@vitejs/plugin-vue-jsx": "3.0.0",
+    "fast-glob": "3.2.12",
     "sass": "1.58.3",
     "typescript": "4.9.3",
     "vite": "4.1.4",
+    "vite-plugin-svg-icons": "2.0.1",
     "vue-tsc": "1.0.24"
   }
 }
