--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vant": "3.4.8",
     "vue": "3.2.45",
     "vue-router": "4.1.6"
   },
@@ -19,6 +20,7 @@
     "sass": "1.58.3",
     "typescript": "4.9.3",
     "vite": "4.1.4",
+    "vite-plugin-style-import": "1.4.1",
     "vite-plugin-svg-icons": "2.0.1",
     "vue-tsc": "1.0.24"
   }
